--- a/views/home.ejs
+++ b/views/home.ejs
@@ -129,7 +129,7 @@
       <% if (locals.id) { %>
       <div class="alert alert-success mt-4 text-center" role="alert">
         🎉 URL Generated:
-        <strong>http://localhost:8001/url/<%= id %></strong>
+        <strong>http://<%= host %>/url/<%= id %></strong>
       </div>
       <% } %>
     </div>
@@ -153,10 +153,7 @@
             <tr>
               <td><%= index + 1 %></td>
               <td>
-                <a
-                  href="http://localhost:8001/url/<%= url.shortId %>"
-                  target="_blank"
-                >
+                <a href="/url/<%= url.shortId %>" target="_blank">
                   <%= url.shortId %> 🔍
                 </a>
               </td>
